--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -2,7 +2,7 @@ name: Scrape and publish
 
 on:
   schedule:
-    - cron: '0 */6 * * *'   # every 6 hours
+     - cron: '0 * * * *'   # every 1 hour (at minute 0)
   workflow_dispatch:
 
 jobs:
