--- a/scrapers/package.json
+++ b/scrapers/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Scraper for hot products",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js"
   },
