--- a/scrapers/package.json
+++ b/scrapers/package.json
@@ -1,12 +1,9 @@
 {
   "name": "market-watcher-scraper",
   "version": "1.0.0",
-  "description": "Scraper for hot products",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
-  "dependencies": {
-    "node-fetch": "^3.3.2"
-  }
+  "dependencies": {}
 }
