--- a/scrapers/package.json
+++ b/scrapers/package.json
@@ -1,9 +1,12 @@
 {
   "name": "market-watcher-scraper",
   "version": "1.0.0",
+  "description": "Scraper that generates hot product JSON files for all US states.",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
+  "author": "",
+  "license": "MIT",
   "dependencies": {}
 }
