--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,49 +1,46 @@
-name: Scrape Shopify and Publish
+name: Shopify Scrape & Commit
 
 on:
   schedule:
-    - cron: '0 * * * *'   # every hour at :00 - adjust as needed
+    - cron: '0 */1 * * *'   # runs every 1 hour (adjust as needed)
   workflow_dispatch:
 
-concurrency:
-  group: "scrape-and-publish"
-  cancel-in-progress: true
+permissions:
+  contents: write
 
 jobs:
-  build:
+  scrape:
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: scrapers
 
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: Set up Node
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Run Shopify fetcher
-        run: npm run shopify
+      - name: Run scraper pipeline
+        run: |
+          node shopify.js
+          node diff_shopify_snapshots.js || true
+          node build_hot_all.js || true
 
-      - name: Compute diffs (sales)
-        run: npm run diff
+      - name: List outputs
+        run: ls -lah out || true
 
-      - name: Map stores to state (best-effort)
-        run: npm run map
-
-      - name: Build hot_all.json
-        run: npm run build
-
-      - name: Commit and push generated JSON to gh-pages
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./scrapers/out
+      - name: Commit generated product files to repo
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add -A scrapers/out/products
+          git diff --cached --quiet || (git commit -m "chore: update product scraper output [ci skip]" && git push)
