--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -2,7 +2,7 @@ name: Shopify Scrape & Commit
 
 on:
   schedule:
-    - cron: '0 */1 * * *'   # runs every 1 hour (adjust as needed)
+    - cron: '0 */1 * * *'   # runs every 1 hour
   workflow_dispatch:
 
 permissions:
@@ -34,13 +34,15 @@ jobs:
           node shopify.js
           node diff_shopify_snapshots.js || true
           node build_hot_all.js || true
+          node keyword_tracker.js || true   # <-- run keyword tracker too
 
       - name: List outputs
         run: ls -lah out || true
 
-      - name: Commit generated product files to repo
+      - name: Commit generated files to repo
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add -A scrapers/out/products
-          git diff --cached --quiet || (git commit -m "chore: update product scraper output [ci skip]" && git push)
+          git add -A scrapers/out/keywords
+          git diff --cached --quiet || (git commit -m "chore: update scraper output [ci skip]" && git push)
