--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -2,7 +2,7 @@ name: Shopify Scrape & Commit
 
 on:
   schedule:
-    - cron: '0 */1 * * *'   # runs every 1 hour (adjust as needed)
+    - cron: '0 */1 * * *'   # runs every 1 hour
   workflow_dispatch:
 
 permissions:
@@ -26,11 +26,12 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Clear npm cache
+      - name: Clean npm cache
         run: npm cache clean --force
 
-      - name: Install dependencies (using npm install)
-        run: npm install
+      - name: Install dependencies (safe mode)
+        run: |
+          npm install --legacy-peer-deps --no-audit --prefer-online --registry=https://registry.npmjs.org/
 
       - name: Run scraper pipeline
         run: |
