--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,86 +1,60 @@
-
-name: Shopify Scrape & Commit
+name: Scrape and publish
 
 on:
+  workflow_dispatch: {}        # Manual run button in Actions tab
   schedule:
-    - cron: '0 */1 * * *'   # runs every hour (adjust as needed)
-  workflow_dispatch:
+    - cron: '0 * * * *'        # Run every hour
+  push:
+    branches: [ main ]         # Also run when you push to main
 
 permissions:
-  contents: write
+  contents: write              # Needed to commit JSON updates
 
 jobs:
   scrape:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: scrapers
-
     steps:
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: Setup Node.js
+      - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: 18
 
-      - name: Clean npm cache (runner)
+      - name: Install dependencies
         run: |
-          npm cache clean --force || true
+          npm ci || npm install
 
-      - name: Install dependencies (force fresh fetch)
+      - name: Run scraper
         run: |
-          # remove any leftover state that could cause integrity issues
-          rm -rf node_modules package-lock.json || true
-          # force a fresh fetch; prefer-online avoids using stale local cache,
-          # --force helps in systems where tarball checksums are problematic.
-          npm install --legacy-peer-deps --no-audit --prefer-online --force --registry=https://registry.npmjs.org/
+          node scrapers/run.js
 
-      - name: Show node & npm and installed deps
+      - name: Show scraper outputs
         run: |
-          node -v
-          npm -v
-          npm ls --depth=0 || true
+          echo "Listing scraper outputs..."
+          ls -R scrapers/out || true
 
-      - name: Run scraper pipeline (always runs shopify.js)
+      - name: Copy outputs to public folders
         run: |
-          set -e
-          node shopify.js
-          node diff_shopify_snapshots.js || true
-          node build_hot_all.js || true
-          node keyword_tracker.js || true
+          mkdir -p products keywords
+          cp -v scrapers/out/products/hot_all.json products/hot_all.json || true
+          cp -v scrapers/out/keywords/keyword_hot.json keywords/keyword_hot.json || true
+          echo "After copy:"
+          ls -R products keywords
 
-          - name: Move JSON outputs to public folders
-  run: |
-    mkdir -p products keywords
-    cp scrapers/out/products/hot_all.json products/hot_all.json
-    cp scrapers/out/keywords/keyword_hot.json keywords/keyword_hot.json
-
-
-      - name: List outputs
-        run: |
-          echo "Contents of out directory:"
-          ls -lah out || true
-          echo "Products (out/products):"
-          ls -lah out/products || true
-          echo "Keywords (out/keywords):"
-          ls -lah out/keywords || true
-
-      - name: Commit generated files to repo
+      - name: Commit & push updates
         env:
-          GIT_AUTHOR_NAME: github-actions[bot]
-          GIT_AUTHOR_EMAIL: github-actions[bot]@users.noreply.github.com
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add -A scrapers/out/products || true
-          git add -A scrapers/out/keywords || true
-          if ! git diff --cached --quiet; then
-            git commit -m "chore: update scraper output [ci skip]"
-            git push
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add products keywords || true
+          if git diff --cached --quiet; then
+            echo "No changes to commit"
           else
-            echo "No changes to commit."
+            git commit -m "chore: update scraper outputs [skip ci]"
+            git push origin HEAD:main
           fi
