--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,9 +1,9 @@
-name: Scrape and publish (debuggable)
+name: Scrape and publish
 
 on:
   workflow_dispatch: {}
   schedule:
-    - cron: '0 * * * *'  # every hour (UTC)
+    - cron: '0 * * * *'   # every hour (UTC)
   push:
     branches: [ main ]
 
@@ -13,63 +13,33 @@ permissions:
 jobs:
   scrape:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Show runner & workspace
-        run: |
-          echo "Runner: $(uname -a)"
-          echo "Workspace: $GITHUB_WORKSPACE"
-          echo "Listing top-level files:"
-          ls -la
-
-      - name: Show node & npm (before install)
-        run: |
-          node -v || true
-          npm -v || true
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
 
       - name: Install dependencies (scrapers/)
-        id: install
+        working-directory: scrapers
         run: |
-          set -euxo pipefail
-          cd scrapers
-          echo "Working dir: $(pwd)"
-          echo "package.json present?"; [ -f package.json ] && echo "yes" || echo "NO"
-          echo "package-lock.json present?"; [ -f package-lock.json ] && echo "yes" || echo "NO"
-          echo "---- package.json (first 200 lines) ----"
-          sed -n '1,200p' package.json || true
-          echo "---- end package.json ----"
-
-          # Try clean install first, fall back to npm install if it fails
-          if npm ci --prefer-offline --no-audit --progress=false; then
-            echo "npm ci succeeded"
+          if [ -f package-lock.json ]; then
+            npm ci
           else
-            echo "npm ci failed — trying npm install"
-            npm install --no-audit --no-fund
+            npm install
           fi
-
-          echo "Installed (top-level):"
-          ls -la node_modules || true
-          echo "npm list (depth=0):"
+          echo "Installed top-level packages:"
           npm ls --depth=0 || true
+          ls -la node_modules | head -20
 
       - name: Run scraper
-        run: |
-          set -euxo pipefail
-          cd scrapers
-          echo "Running scraper (pwd=$(pwd))"
-          node run.js
+        working-directory: scrapers
+        run: node run.js
 
-      - name: Show created outputs
-        run: |
-          echo "scrapers/out tree:"
-          ls -R scrapers/out || true
-          echo "products/ and keywords/ at root:"
-          ls -R products || true
-          ls -R keywords || true
-
-      - name: Copy outputs to public folders
+      - name: Copy outputs to repo root
         run: |
           mkdir -p products keywords
           cp -v scrapers/out/products/hot_all.json products/hot_all.json || true
@@ -77,7 +47,7 @@ jobs:
           echo "After copy:"
           ls -R products keywords || true
 
-      - name: Commit & push outputs (if changed)
+      - name: Commit & push updates
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
