--- a/scrapers/package.json
+++ b/scrapers/package.json
@@ -1,16 +1,18 @@
-
 {
   "name": "market-watcher-scrapers",
   "version": "1.0.0",
-  "description": "Keyword and market data scrapers",
-  "main": "keyword_tracker.js",
+  "description": "Scraper scripts for Market Watcher project",
+  "main": "run.js",
+  "type": "commonjs",
   "scripts": {
-    "start": "node keyword_tracker.js"
+    "start": "node run.js",
+    "scrape": "node run.js"
   },
   "dependencies": {
-    "axios": "^1.4.0",
+    "axios": "^1.6.8",
     "cheerio": "^1.0.0-rc.12",
-    "p-retry": "^5.0.0",
-    "google-trends-api": "^4.9.0"
-  }
+    "fs-extra": "^11.1.1"
+  },
+  "author": "Mrinal Sood",
+  "license": "MIT"
 }
