--- a/.github/workflows/collect.yml
+++ b/.github/workflows/collect.yml
@@ -20,12 +20,12 @@ jobs:
       - name: Install dependencies
         run: npm ci || npm install
 
-      - name: Run collector
-        run: npm run collect
+      - name: Run scrapers
+        run: npm run scrape
         env:
           NEWS_API_KEY: ${{ secrets.NEWS_API_KEY }}
 
-      - name: Commit & Push
+      - name: Commit & Push results
         run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
