--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
   "scripts": {
     "scrape:products": "node scrapers/products.js",
     "scrape:keywords": "node scrapers/keywords.js",
+    "scrape:news": "node scrapers/news.js",
     "scrape": "node scrapers/run_all.js"
+  },
+  "dependencies": {
+    "axios": "^1.6.8",
+    "cheerio": "^1.0.0-rc.12",
+    "google-trends-api": "^4.9.0"
   }
 }
