--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,44 +1,36 @@
-name: Scrape & Publish
+name: Run Market Watcher Scraper
 
 on:
   schedule:
-    - cron: "0 * * * *" # every hour
-  workflow_dispatch:
-
-permissions:
-  contents: write
+    - cron: "0 */6 * * *"  # every 6 hours
+  workflow_dispatch:        # allows manual run from Actions tab
 
 jobs:
   scrape:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Use Node.js 20
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 22
 
-      - name: Show Node/NPM versions
-        run: |
-          node -v
-          npm -v
+      - name: Install dependencies
+        run: npm install
 
-      - name: Run scrapers
-        run: |
-          npm run scrape
+      - name: Run scraper
+        env:
+          SERP_API_KEY: ${{ secrets.SERP_API_KEY }}
+          NEWS_API_KEY: ${{ secrets.NEWS_API_KEY }}
+        run: npm run scrape
 
-      - name: Commit changes (if any)
+      - name: Commit and push results
         run: |
-          set -e
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add products/hot_all.json keywords/keyword_hot.json out/
-          if git diff --cached --quiet; then
-            echo "No changes to commit."
-          else
-            git commit -m "ci: update scraper outputs"
-            git push
-          fi
+          git config user.name "github-actions"
+          git config user.email "actions@github.com"
+          git add products/hot_all.json keywords/keyword_hot.json
+          git commit -m "Auto-update scraped data [skip ci]" || echo "No changes to commit"
+          git push origin main
